# libsfxplus

./: .gitmodules  CMakeLists.txt  README.md
cmake/modules/: FindLibSndFile.cmake  FindOpenAL.cmake
config/: sfxplus_config.h.in
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  main.cpp
examples/playing/: CMakeLists.txt  main.cpp
examples/streaming/: CMakeLists.txt  main.cpp
include/: sfxplus.h
include/sfxplus/: sfxplus.h  sfxplusio.h
libraries/: CMakeLists.txt
libraries/core/: CMakeLists.txt
libraries/core/include/: core.h  io.h
libraries/core/src/: audiofile.cpp  error.cpp  init.cpp  io.cpp  stream.cpp
libraries/io/: CMakeLists.txt
libraries/io/include/: io.h  mp3.h
libraries/io/src/: io.cpp  mp3.cpp
src/: audio.cpp  audio3d.cpp  audiofile.cpp  core.h  error.cpp  file.cpp  init.cpp  io.cpp  io.h  sfxplus.cpp  source.cpp  stream.cpp
